--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     },
     "dependencies": {
         "axios": "^1.5.0",
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "csv-writer": "^1.6.0",
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
         "express-rate-limit": "^6.7.0",
         "helmet": "^6.0.0",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.0.0",
         "morgan": "^1.10.0",
         "node-cron": "^3.0.2"
