--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "jest": "^30.1.3",
+        "mongodb-memory-server": "^10.2.1",
         "nodemon": "^2.0.22",
         "supertest": "^7.1.4"
     }
